<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mark"
            android:icon="@drawable/ic_baseline_bookmark"
            android:title="@string/mark" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_baseline_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_competition"
            android:icon="@drawable/ic_trophy"
            android:title="@string/competition" />
        <item
            android:id="@+id/nav_enroll"
            android:icon="@drawable/ic_checklist"
            android:title="@string/enroll" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_baseline_directions_bus"
            android:title="@string/bus" />
        
    </group>
</menu>